# QtTemplate

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Template.clangd
resources/: CMakeLists.txt  resources.qrc
scripts/cmake/: Package.cmake
scripts/python/: LinuxMac.py  Utils.py  Windows.py
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  MainCore.cpp  MainCore.h
src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/utils/: CMakeLists.txt  Config.cpp  Config.h  Log.cpp  Log.h  Qcustomplot.cpp  Qcustomplot.h  SafeQueue.h  Serial.cpp  Serial.h  Singleton.h  Utils.cpp  Utils.h  Wave.cpp  Wave.h  version.h.in
translations/: CMakeLists.txt
